# subtitle-ai

./: .env.sample  ANALYTICS_IMPLEMENTATION.md  BATCH_PROCESSING.md  CLAUDE.md  Dockerfile  OOONA_RESEARCH.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_analytics.py
.claude/: settings.local.json
.streamlit/: config.toml
documentation/: ooona-api.json  responses-type.md
examples/: subsai_translation.ipynb
src/subsai/: batch_processor.py  cli.py  configs.py  main.py  utils.py  webui.py
src/subsai/analytics/: __init__.py  analytics_database.py  analytics_service.py  basic_dashboard.py  config.py  dashboard.py
src/subsai/auth/: __init__.py  auth.py  database.py  decorators.py  models.py  pages.py
src/subsai/models/: hugging_face_model.py  stable_ts_model.py  whisper_model.py  whispercpp_model.py
src/subsai/storage/: ooona_converter.py  s3_storage.py
src/subsai/utils/: __init__.py  file_manager.py
tests/: test_hebrew_models.py
